--- a/src/components/app/groupMenu/settings/settingSection/settingSection.module.scss
+++ b/src/components/app/groupMenu/settings/settingSection/settingSection.module.scss
@@ -35,8 +35,7 @@
 
   .settingContent {
     display: flex;
-    padding-left: var(--space-96);
-    padding-right: var(--space-96);
+    padding: var(--space-24) var(--space-96) var(--space-32) var(--space-96);
 
     h4 {
       font-family: var(--font-heading), sans-serif;
